--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    
 }
 .container {
     border-radius: 10px;
@@ -15,7 +16,7 @@ body{
 .container input{
     border-radius: 4px;
     box-shadow: inset 0 0 10px 5px #e6e6e6;
-    width: 80%;
+    width: 90%;
     height: 10vh;
     margin-top: 5vh;
     margin: 5vh auto 0 auto;
@@ -27,7 +28,7 @@ body{
 .container .buttons{
     display: grid;
     margin-top: 5vh;
-    width: 80%;
+    width: 90%;
     height: 50%;
     grid-template-columns: repeat(6, 13%);
     grid-auto-rows: minmax(20% auto);
@@ -44,6 +45,7 @@ body{
                 -2px -2px 2px rgba(236, 236, 236, 0.952);
     border-radius: .5vh;
     height: 6vh; 
+    font-size: 2vh;
 }
 .container .buttons .button:hover{
     background-color: rgb(228, 234, 198);
@@ -62,7 +64,7 @@ body{
     background-color: rgb(10, 61, 14);
 }
 .container .buttons #equal-btn{
-    background-color: rgb(101, 104, 196);
+    background-color: rgb(23, 27, 132);
     color: #e6e6e6;
 }
 .container .buttons #equal-btn:hover{
